RESOLVED FIXED45584
[EFL] Fix EFL build after r67274
https://bugs.webkit.org/show_bug.cgi?id=45584
Summary [EFL] Fix EFL build after r67274
Ryuan Choi
Reported 2010-09-10 22:36:14 PDT
ZoomMode.h was removed and some of api changed.
Attachments
Patch (3.02 KB, patch)
2010-09-10 22:51 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2010-09-10 22:51:11 PDT
WebKit Commit Bot
Comment 2 2010-09-11 08:05:21 PDT
Comment on attachment 67291 [details] Patch Clearing flags on attachment: 67291 Committed r67297: <http://trac.webkit.org/changeset/67297>
WebKit Commit Bot
Comment 3 2010-09-11 08:05:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.