2010-09-11  Ryuan Choi  <ryuan.choi@samsung.com>

Reviewed by Antonio Gomes.

        [EFL] Fix EFL build after r67274
        https://bugs.webkit.org/show_bug.cgi?id=45584

        Remove include of ZoomMode.h and change setZoomFactor and zoomFactor
        to proper apis chaged by r67264.

        * ewk/ewk_frame.cpp:
        (ewk_frame_zoom_get):
        (ewk_frame_zoom_set):
        (ewk_frame_zoom_text_only_get):
        (ewk_frame_zoom_text_only_set):

Canonical link: https://commits.webkit.org/58029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67297 268f45cc-cd09-0410-ab3c-d52691b4dbfc